--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <input type="radio" name="mode" value="binary" checked /> Sí / No
         </label>
         <label class="menu-option">
+          <input type="radio" name="mode" value="binaryAI" /> Sí / No (IA)
+        </label>
+        <label class="menu-option">
           <input type="radio" name="mode" value="dice" /> Dado de seis caras
         </label>
         <hr style="margin: 0.4rem 0; border: none; border-top: 1px solid rgba(255, 255, 255, 0.1);" />
@@ -36,9 +39,36 @@
     </header>
 
     <main class="app" aria-live="polite">
-      <div class="mode-chip" id="modeChip">Modo: Sí / No</div>
-      <div class="status" id="decision">Listo</div>
-      <button class="cta" id="decideButton" type="button">Decidir</button>
+      <section class="hero">
+        <div class="mode-chip" id="modeChip">Modo: Sí / No</div>
+        <div class="status" id="decision">Listo</div>
+        <button class="cta" id="decideButton" type="button">Decidir</button>
+      </section>
+
+      <section class="card" id="yesNoCard" aria-labelledby="yesNoTitle" hidden>
+        <div class="card-header">
+          <div>
+            <p class="eyebrow">Ponderar con IA (opcional)</p>
+            <h1 id="yesNoTitle">Decisión Sí / No</h1>
+          </div>
+          <span class="badge">Beta</span>
+        </div>
+        <div class="form-group">
+          <label for="questionInput">Pregunta</label>
+          <textarea id="questionInput" placeholder="¿Debería salir a correr hoy?" maxlength="1000" rows="3"></textarea>
+        </div>
+        <label class="checkbox-row">
+          <input type="checkbox" id="useAiToggle" />
+          <span>Usar IA para ponderar (si no, 50/50)</span>
+        </label>
+        <div class="button-row">
+          <button class="btn-primary" type="button" id="calcWeightsButton">Calcular pesos</button>
+          <button class="btn-secondary" type="button" id="drawNowButton">Elegir ahora</button>
+        </div>
+        <p class="hint" id="weightsStatus">Introduce una pregunta y pulsa “Calcular pesos”.</p>
+        <pre id="weightsOutput" class="code-block">Aún no has calculado pesos.</pre>
+        <p class="result-line" id="weightedResult">Resultado: —</p>
+      </section>
     </main>
 
     <!-- Modal de Lista -->
