--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           <label for="questionInput">Pregunta</label>
           <textarea id="questionInput" placeholder="¿Qué decisión quieres ponderar?" maxlength="1000" rows="3"></textarea>
         </div>
+        <div class="checkbox-row" id="listAiRow" hidden>
+          <input type="checkbox" id="listAiToggle" />
+          <label for="listAiToggle">Decidir listas con IA</label>
+        </div>
         <button class="cta" id="decideButton" type="button">Decidir</button>
         <p class="assistive" id="weightsStatus" hidden></p>
       </section>
