--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="hero">
         <div class="mode-chip" id="modeChip">Modo: Sí / No</div>
         <div class="status" id="decision">Listo</div>
-        <p class="decision-meta" id="decisionMeta" hidden>—</p>
+        <p class="decision-meta" id="decisionMeta" hidden aria-hidden="true">—</p>
         <div class="question-block" id="questionBlock" hidden>
           <label for="questionInput">Pregunta</label>
           <textarea id="questionInput" placeholder="¿Qué decisión quieres ponderar?" maxlength="1000" rows="3"></textarea>
@@ -53,6 +53,19 @@
         </div>
         <button class="cta" id="decideButton" type="button">Decidir</button>
         <p class="assistive" id="weightsStatus" hidden></p>
+      </section>
+
+      <section class="card weights-card" id="weightsCard" aria-live="polite" hidden>
+        <div class="card-header">
+          <div>
+            <p class="eyebrow">Ponderaciones</p>
+            <h1>Distribución de pesos</h1>
+          </div>
+          <span class="badge badge-idle" id="weightsBadge">Esperando</span>
+        </div>
+        <p class="hint weights-helper" id="weightsHelper">Cuando uses el modo IA verás aquí los pesos devueltos.</p>
+        <div id="weightsChart" class="weights-chart" hidden></div>
+        <p id="weightsEmpty" class="empty-state">Sin datos de pesos todavía.</p>
       </section>
     </main>
 
