--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button id="createListBtn" class="menu-button-small">+ Nueva Lista</button>
         <hr style="margin: 0.8rem 0 0.4rem; border: none; border-top: 1px solid rgba(255, 255, 255, 0.1);" />
         <button id="openHistoryBtn" class="menu-button-small">Historial</button>
+        <button id="checkUpdatesBtn" class="menu-button-small" type="button">Comprobar actualizaciones</button>
       </div>
     </header>
 
